--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
     <header class="header">
         <div class="header-info">
             <h1 class="header-title">Let's help those who are more in need</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod iusto ut? Quaerat saepe quod
-                perferendis odio! Praesentium, adipisci obcaecati?</p>
+            <p>We connects donors in nearly every country in the world. We help fellow nonprofits access the funding,
+                tools, training, and support they need to serve their communities.</p>
             <button class="button">Donate Now</button>
         </div>
     </header>
 
     <section class="donate-now">
         <h2 class="title">Donate Today</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque nostrum, fuga excepturi quas sed voluptatem
-            possimus earum recusandae eum laudantium?</p>
+        <p>Donate as much money as you can for the poor and helpless.</p>
         <div class="ammount-list">
             <ul>
                 <li>100tk</li>
-                <li class="second">200tk</li>
+                <li id="ammount-list-second">200tk</li>
                 <li>500tk</li>
                 <li>1000tk</li>
                 <li>5000tk</li>
@@ -48,57 +47,58 @@
 
     <section class="donate-plan container">
         <h2 class="title">Our Donate Plan</h2>
-        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque nostrum, fuga excepturi
-            quas sed voluptatem possimus earum recusandae eum laudantium?</p>
+        <p class="description">Our main target is the poor and helpless people who cannot afford to eat, who have no
+            place to stay and the children whose parents cannot afford their education.</p>
         <div class="plans">
             <div class="plan plan1">
                 <img src="images/food.png">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis nisi possimus suscipit
-                    voluptatem culpa. possimus suscipit voluptatem culpa.</p>
+                <h3>Food for family</h3>
+                <p>Those miserable families who do not get proper food.</p>
             </div>
             <div class="plan plan2">
                 <img src="images/Frame-1.png">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis nisi possimus suscipit
-                    voluptatem culpa. possimus suscipit voluptatem culpa.</p>
+                <h3>Shelter for a family</h3>
+                <p>Those miserable families who have no place to stay.</p>
             </div>
             <div class="plan plan3">
                 <img src="images/shelter.png">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam blanditiis nisi possimus suscipit
-                    voluptatem culpa. possimus suscipit voluptatem culpa.</p>
+                <h3>Education for a child</h3>
+                <p>Distressed children whose families cannot afford their education.</p>
             </div>
         </div>
     </section>
 
 
     <section class="donation-numbers container">
-        <div class="money-donated number">
-            <div class="img img1">
-                <img src="images/salary.png" alt="">
+        <h2 class="title">Supportive Worldwide Donation</h2>
+
+        <div class="all-numbers">
+            <div class="money-donated number">
+                <div class="img img1">
+                    <img src="images/salary.png" alt="">
+                </div>
+                <div class="total-ammount">
+                    <h4>5Lac+</h4>
+                    <p>Money Donated</p>
+                </div>
             </div>
-            <div class="total-ammount">
-                <h4>5Lac+</h4>
-                <p>Money Donated</p>
+            <div class="donation-received number">
+                <div class="img img2">
+                    <img src="images/love.png" alt="">
+                </div>
+                <div class="total-ammount">
+                    <h4>25+</h4>
+                    <p>Donation Received</p>
+                </div>
             </div>
-        </div>
-        <div class="donation-received number">
-            <div class="img img2">
-                <img src="images/love.png" alt="">
-            </div>
-            <div class="total-ammount">
-                <h4>25+</h4>
-                <p>Donation Received</p>
-            </div>
-        </div>
-        <div class="active-campaigns number">
-            <div class="img img3">
-                <img src="images/campaign.png" alt="">
-            </div>
-            <div class="total-ammount">
-                <h4>7</h4>
-                <p>Active Campaigns</p>
+            <div class="active-campaigns number">
+                <div class="img img3">
+                    <img src="images/campaign.png" alt="">
+                </div>
+                <div class="total-ammount">
+                    <h4>7</h4>
+                    <p>Active Campaigns</p>
+                </div>
             </div>
         </div>
     </section>
@@ -106,8 +106,8 @@
 
     <section class="get-updates">
         <h2 class="title">Get My Updates</h2>
-        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque nostrum, fuga excepturi
-            quas sed voluptatem possimus earum recusandae eum laudantium?</p>
+        <p class="description">You can subscribe with your email address below to get constantly updated information
+            about our organization.</p>
         <form action="#">
             <input type="email" placeholder="Email">
             <button class="button">Subscribe</button>
